--- a/pythoncode/sample.ipynb
+++ b/pythoncode/sample.ipynb
@@ -85,7 +85,7 @@
      "output_type": "stream",
      "text": [
       "Loading data...\n",
-      "Data loaded in 12.54 s\n"
+      "Data loaded in 17.91 s\n"
      ]
     }
    ],
@@ -109,11 +109,11 @@
      "output_type": "stream",
      "text": [
       "========== Custom Logistic Regression ==========\n",
-      "Training time: 8.40 s\n",
-      "Predict summary: {0: 102667, 1: 97333}\n",
-      "Prediction time: 0.96 s\n",
-      "Accuracy: 80.48%\n",
-      "F1 score: 80.23%\n"
+      "Training time: 45.56 s\n",
+      "Predict summary: {0: 97380, 1: 102620}\n",
+      "Prediction time: 1.17 s\n",
+      "Accuracy: 83.98%\n",
+      "F1 score: 84.20%\n"
      ]
     }
    ],
@@ -123,7 +123,7 @@
     "custom_model = LogisticRegressionParallel(CORE_COUNT)\n",
     "\n",
     "start_time = time.time()\n",
-    "weights = custom_model.fit(X_train, y_train)\n",
+    "weights = custom_model.fit(X_train, y_train, 0.1, maxtier=200)\n",
     "train_time = time.time() - start_time\n",
     "print(f\"Training time: {train_time:.2f} s\")\n",
     "\n",
@@ -153,9 +153,9 @@
      "output_type": "stream",
      "text": [
       "========== Scikit-learn Logistic Regression ==========\n",
-      "Training time: 15.06 s\n",
+      "Training time: 20.25 s\n",
       "Predict summary: {0: 99266, 1: 100734}\n",
-      "Prediction time: 1.62 s\n",
+      "Prediction time: 4.72 s\n",
       "Accuracy: 84.14%\n",
       "F1 score: 84.21%\n"
      ]
@@ -182,6 +182,50 @@
     "\n",
     "acc = accuracy_score(y_test, y_pred)\n",
     "f1 = f1_score(y_test, y_pred)\n",
+    "print(f\"Accuracy: {acc * 100:.2f}%\")\n",
+    "print(f\"F1 score: {f1 * 100:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9265fdfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========== Custom Logistic Regression ==========\n",
+      "Training time: 169.18 s\n",
+      "Predict summary: {0: 481571, 1: 518429}\n",
+      "Prediction time: 31.47 s\n",
+      "Accuracy: 83.63%\n",
+      "F1 score: 83.93%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# =============================== CUSTOM MODEL ===============================\n",
+    "print(\"=\" * 10 + \" Custom Logistic Regression \" + \"=\" * 10)\n",
+    "custom_model = LogisticRegressionParallel(CORE_COUNT)\n",
+    "\n",
+    "start_time = time.time()\n",
+    "weights = custom_model.fit(X, y)\n",
+    "train_time = time.time() - start_time\n",
+    "print(f\"Training time: {train_time:.2f} s\")\n",
+    "\n",
+    "start_time = time.time()\n",
+    "Y_predict = custom_model.predict(X)\n",
+    "predict_time = time.time() - start_time\n",
+    "\n",
+    "unique, counts = np.unique(Y_predict, return_counts=True)\n",
+    "summary = {int(k): int(v) for k, v in zip(unique, counts)}\n",
+    "print(f\"Predict summary: {summary}\")\n",
+    "print(f\"Prediction time: {predict_time:.2f} s\")\n",
+    "\n",
+    "acc = accuracy_score(y, Y_predict)\n",
+    "f1 = f1_score(y, Y_predict)\n",
     "print(f\"Accuracy: {acc * 100:.2f}%\")\n",
     "print(f\"F1 score: {f1 * 100:.2f}%\")"
    ]
